--- a/app/src/main/res/layout/activity_jogo.xml
+++ b/app/src/main/res/layout/activity_jogo.xml
@@ -8,16 +8,17 @@
     tools:context=".activity.JogoActivity">
 
 
+
     <androidx.appcompat.widget.ContentFrameLayout
         android:id="@+id/tela_jogo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        android:layout_height="wrap_content">
 
         <fragment
             android:name="com.palavras.unicap.palavrinhas.fragment.TecladoAlfabeticoFragment"
@@ -31,15 +32,18 @@
     </androidx.appcompat.widget.ContentFrameLayout>
 
     <androidx.appcompat.widget.ContentFrameLayout
-        android:id="@+id/teclado_jogo"
-        android:layout_width="480dp"
-        android:layout_height="203dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:tag="teclado_fragment"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/botao_voltar"
-        app:layout_constraintTop_toBottomOf="@+id/tela_jogo">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/life_jogo"
+        android:id="@+id/teclado_jogo">
 
         <fragment
             android:name="com.palavras.unicap.palavrinhas.fragment.TecladoAlfabeticoFragment"
@@ -49,52 +53,54 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView"
             app:layout_constraintVertical_bias="1.0"
-            tools:layout="@layout/fragment_teclado"></fragment>
+            tools:layout="@layout/fragment_teclado"
+            ></fragment>
+
+
     </androidx.appcompat.widget.ContentFrameLayout>
 
     <ImageView
         android:id="@+id/botao_voltar"
         android:layout_width="62dp"
         android:layout_height="65dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@android:drawable/ic_menu_revert" />
 
     <androidx.appcompat.widget.ContentFrameLayout
         android:id="@+id/life_jogo"
-        android:layout_width="55dp"
-        android:layout_height="155dp"
-        android:layout_marginStart="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintStart_toEndOf="@+id/teclado_jogo"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/switch_teclado"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tela_jogo">
+
         <fragment
+            android:id="@+id/life_g"
             android:name="com.palavras.unicap.palavrinhas.fragment.LifeFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout="@layout/fragment_life"></fragment>
+            tools:layout="@layout/fragment_life"
+           ></fragment>
 
     </androidx.appcompat.widget.ContentFrameLayout>
-
 
 
     <Switch
         android:id="@+id/switch_teclado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="4dp"
-        android:text="Teclado"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="180dp"
+        android:text="TECLADO"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/teclado_jogo"
-        app:layout_constraintTop_toBottomOf="@+id/life_jogo" />
-
-
+        app:layout_constraintTop_toBottomOf="@+id/tela_jogo" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
