--- a/app/src/main/res/layout/activity_recordes.xml
+++ b/app/src/main/res/layout/activity_recordes.xml
@@ -10,8 +10,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lista_usuarios"
-        android:layout_width="677dp"
-        android:layout_height="307dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
