--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -10,8 +10,8 @@
 
     <TextView
         android:id="@+id/jo"
-        android:layout_width="270dp"
-        android:layout_height="54dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="128dp"
         android:text="Digite seu nome: "
@@ -21,11 +21,11 @@
 
     <TextView
         android:id="@+id/nome"
-        android:layout_width="294dp"
-        android:layout_height="53dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="128dp"
-        android:text=""
+        android:text="NOME"
         android:textSize="32sp"
         app:layout_constraintStart_toEndOf="@+id/jo"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,24 +34,24 @@
         android:id="@+id/botao_salvar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="564dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/button_radius"
         android:text="Salvar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/teclado"
         app:layout_constraintTop_toBottomOf="@+id/jo"
-        app:layout_constraintVertical_bias="0.446" />
+        app:layout_constraintVertical_bias="0.443" />
 
     <TextView
         android:id="@+id/mensagemFinal"
-        android:layout_width="660dp"
-        android:layout_height="91dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:text=""
+        android:text="Mensagem"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
@@ -61,13 +61,13 @@
     <fragment
         android:id="@+id/teclado"
         android:name="com.palavras.unicap.palavrinhas.fragment.TecladoAlfabeticoFragment"
-        android:layout_width="479dp"
-        android:layout_height="203dp"
-        android:layout_marginEnd="52dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/botao_salvar"></fragment>
-
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout="@layout/fragment_teclado"></fragment>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
