--- a/app/src/main/res/layout/fragment_life.xml
+++ b/app/src/main/res/layout/fragment_life.xml
@@ -4,38 +4,34 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="55dp"
-    android:layout_height="140dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     tools:context=".fragment.LifeFragment"
     android:tag="life_fragment"
     android:background="#fffd82">
 
     <ImageView
         android:id="@+id/vida3"
-        android:layout_width="49dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="124dp"
-
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tela_jogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/coracao_icon" />
 
     <ImageView
         android:id="@+id/vida2"
-        android:layout_width="49dp"
-        android:layout_height="45dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/vida3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/vida3"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/coracao_icon" />
 
     <ImageView
         android:id="@+id/vida1"
-        android:layout_width="49dp"
-        android:layout_height="45dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/vida2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/vida2"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/coracao_icon" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
