--- a/app/src/main/res/layout/activity_segunda_chance.xml
+++ b/app/src/main/res/layout/activity_segunda_chance.xml
@@ -23,13 +23,13 @@
         android:id="@+id/palavra2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="156dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginTop="72dp"
         android:background="@drawable/button_radius"
-        android:text="Button"
         android:onClick="getPalavraEscolhida"
+        android:text="Button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/palavra3"
@@ -53,13 +53,13 @@
         android:id="@+id/palavra4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="156dp"
-        android:layout_marginEnd="144dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginEnd="136dp"
         android:background="@drawable/button_radius"
-        android:text="Button"
         android:onClick="getPalavraEscolhida"
+        android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView"
