--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="128dp"
-        android:text="NOME"
+        android:text=""
         android:textSize="32sp"
         app:layout_constraintStart_toEndOf="@+id/jo"
         app:layout_constraintTop_toTopOf="parent" />
