--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -44,6 +44,23 @@
         app:layout_constraintTop_toBottomOf="@+id/jo"
         app:layout_constraintVertical_bias="0.443" />
 
+    <Button
+        android:id="@+id/botao_limpar_recordes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/button_radius"
+        android:text="Limpar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.178"
+        app:layout_constraintStart_toEndOf="@+id/teclado"
+        app:layout_constraintTop_toBottomOf="@+id/botao_salvar"
+        app:layout_constraintVertical_bias="0.452" />
+
     <TextView
         android:id="@+id/mensagemFinal"
         android:layout_width="wrap_content"
