Melhoria de performance com threads

--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -36,13 +36,16 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/button_radius"
         android:text="Salvar"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/teclado"
         app:layout_constraintTop_toBottomOf="@+id/jo"
-        app:layout_constraintVertical_bias="0.443" />
+        app:layout_constraintVertical_bias="0.448" />
 
     <Button
         android:id="@+id/botao_limpar_recordes"
@@ -62,7 +65,7 @@
         app:layout_constraintVertical_bias="0.452" />
 
     <TextView
-        android:id="@+id/mensagemFinal"
+        android:id="@+id/mensagem_final"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
