--- a/app/src/main/res/layout/fragment_jogo.xml
+++ b/app/src/main/res/layout/fragment_jogo.xml
@@ -91,6 +91,15 @@
                 app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />
             <!--app:srcCompat="@android:drawable/ic_media_play" />-->
 
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
