--- a/app/src/main/res/layout/activity_jogo.xml
+++ b/app/src/main/res/layout/activity_jogo.xml
@@ -10,6 +10,7 @@
 
 
     <androidx.appcompat.widget.ContentFrameLayout
+        android:name="com.palavras.unicap.palavrinhas.fragment.JogoFragment"
         android:id="@+id/tela_jogo"
         android:layout_width="match_parent"
         android:layout_marginStart="8dp"
@@ -21,7 +22,7 @@
         android:layout_height="wrap_content">
 
         <fragment
-            android:name="com.palavras.unicap.palavrinhas.fragment.TecladoAlfabeticoFragment"
+            android:name="com.palavras.unicap.palavrinhas.fragment.JogoFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -43,19 +44,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/life_jogo"
+        tools:layout="@layout/fragment_teclado"
         android:id="@+id/teclado_jogo">
-
-        <fragment
-            android:name="com.palavras.unicap.palavrinhas.fragment.TecladoAlfabeticoFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView"
-            app:layout_constraintVertical_bias="1.0"
-            tools:layout="@layout/fragment_teclado"
-            ></fragment>
-
 
     </androidx.appcompat.widget.ContentFrameLayout>
 
