--- a/app/src/main/res/layout/fragment_jogo.xml
+++ b/app/src/main/res/layout/fragment_jogo.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".fragment.JogoFragment"
-    >
+    tools:context=".fragment.JogoFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -25,24 +24,19 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textViewPalavra"
-                android:layout_width="wrap_content"
-                android:layout_height="45dp"
-                android:layout_marginStart="40dp"
-                android:text="PALAVRA : "
-                android:textSize="32sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imagemPalavra" />
-
-            <TextView
                 android:id="@+id/palavra_escrita"
-                android:layout_width="200dp"
-                android:layout_height="45dp"
-                android:layout_marginStart="12dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:text=""
                 android:textSize="32sp"
-                app:layout_constraintStart_toEndOf="@+id/textViewPalavra"
-                app:layout_constraintTop_toTopOf="@+id/textViewPalavra" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/botao_confirmar"
+                app:layout_constraintStart_toEndOf="@+id/imagemPalavra"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/botao_confirmar"
@@ -72,8 +66,8 @@
 
             <ImageView
                 android:id="@+id/imagemPalavra"
-                android:layout_width="160dp"
-                android:layout_height="110dp"
+                android:layout_width="182dp"
+                android:layout_height="150dp"
                 android:layout_marginStart="36dp"
                 android:layout_marginTop="4dp"
                 android:src="@android:color/transparent"
@@ -89,7 +83,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />
-            <!--app:srcCompat="@android:drawable/ic_media_play" />-->
+
 
             <ProgressBar
                 android:id="@+id/progress_bar"
