Desenvolvimento da tela de menu
 - Ajuste na performance no display dos teclados

--- a/app/src/main/res/layout/fragment_jogo.xml
+++ b/app/src/main/res/layout/fragment_jogo.xml
@@ -32,6 +32,8 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:text=""
+                tools:text="Palavra"
+                android:maxLength="16"
                 android:textSize="32sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/botao_confirmar"
