--- a/app/src/main/res/layout/activity_jogo.xml
+++ b/app/src/main/res/layout/activity_jogo.xml
@@ -19,17 +19,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        tools:layout="@layout/fragment_jogo">
 
-        <fragment
-            android:name="com.palavras.unicap.palavrinhas.fragment.JogoFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView"
-            app:layout_constraintVertical_bias="1.0"
-            tools:layout="@layout/fragment_jogo"></fragment>
+        <!--<fragment-->
+            <!--android:name="com.palavras.unicap.palavrinhas.fragment.JogoFragment"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--app:layout_constraintStart_toStartOf="parent"-->
+            <!--app:layout_constraintTop_toBottomOf="@+id/cardView"-->
+            <!--app:layout_constraintVertical_bias="1.0"-->
+            <!--tools:layout="@layout/fragment_jogo"></fragment>-->
     </androidx.appcompat.widget.ContentFrameLayout>
 
     <androidx.appcompat.widget.ContentFrameLayout
