--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -16,7 +16,7 @@
         android:layout_marginBottom="108dp"
         android:background="@drawable/button_radius"
         android:onClick="selectTypeOfWords"
-        android:text=""
+        android:text="Palavras com RR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topico4"
@@ -31,7 +31,7 @@
         android:layout_marginTop="100dp"
         android:background="@drawable/button_radius"
         android:onClick="selectTypeOfWords"
-        android:text=""
+        android:text="Palavras terminas em U-L"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Palavras terminas em U" />
@@ -46,7 +46,7 @@
         android:layout_marginBottom="112dp"
         android:background="@drawable/button_radius"
         android:onClick="selectTypeOfWords"
-        android:text=""
+        android:text="Palavras com LH"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/topico1"
         app:layout_constraintHorizontal_bias="0.426"
@@ -59,13 +59,13 @@
         android:id="@+id/topico4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="76dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginEnd="124dp"
         android:background="@drawable/button_radius"
         android:onClick="selectTypeOfWords"
-        android:text=""
+        android:text="Palavras com S"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Palavras terminadas em L" />
+        tools:text="Palavras com S" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
