--- a/app/src/main/res/layout/activity_segunda_chance.xml
+++ b/app/src/main/res/layout/activity_segunda_chance.xml
@@ -11,27 +11,29 @@
         android:id="@+id/palavra1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="136dp"
+        android:layout_marginEnd="108dp"
         android:layout_marginBottom="88dp"
         android:background="@drawable/button_radius"
-        android:text="Button"
         android:onClick="getPalavraEscolhida"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="palavra 4" />
 
     <Button
         android:id="@+id/palavra2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
+        android:layout_marginStart="124dp"
         android:layout_marginTop="72dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/button_radius"
         android:onClick="getPalavraEscolhida"
-        android:text="Button"
+        android:text=""
         app:layout_constraintBottom_toTopOf="@+id/palavra3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:text="palavra 1" />
 
     <Button
         android:id="@+id/palavra3"
@@ -42,25 +44,27 @@
         android:layout_marginBottom="88dp"
         android:background="@drawable/button_radius"
         android:onClick="getPalavraEscolhida"
-        android:text="Button"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/palavra1"
-        app:layout_constraintHorizontal_bias="0.262"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.313"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="palavra 3" />
 
     <Button
         android:id="@+id/palavra4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
-        android:layout_marginEnd="136dp"
+        android:layout_marginEnd="108dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/button_radius"
         android:onClick="getPalavraEscolhida"
-        android:text="Button"
+        android:text=""
         app:layout_constraintBottom_toTopOf="@+id/palavra1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:text="palavra 2" />
 
     <TextView
         android:id="@+id/textView"
